Made the dark mode button be inline with the other menu options when on mobile.

--- a/breakfasts.html
+++ b/breakfasts.html
@@ -31,11 +31,13 @@
               data-bs-toggle="dropdown" aria-expanded="false">
               Menus
             </a>
-            <ul id="nav-dropdown" class="dropdown-menu nav-dropdown active" aria-current="page" aria-labelledby="navbarDropdownMenuLink">
+            <ul id="nav-dropdown" class="dropdown-menu nav-dropdown active" aria-current="page"
+              aria-labelledby="navbarDropdownMenuLink">
               <li><a class="dropdown-item" href="menus.html">All Menus</a>
                 <hr id="dropdown-hr">
               </li>
-              <li><a id="current-dropdown" class="dropdown-item dropdown-current-page" href="breakfasts.html">Breakfast Menu</a></li>
+              <li><a id="current-dropdown" class="dropdown-item dropdown-current-page" href="breakfasts.html">Breakfast
+                  Menu</a></li>
               <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips & Jackets</a></li>
               <li><a class="dropdown-item" href="paninis_wraps_roasts.html">Paninis, Wraps & Roasts</a></li>
               <li><a class="dropdown-item" href="cold_fillings_salads.html">Cold Fillings & Salad Boxes</a></li>
@@ -48,9 +50,7 @@
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
-        <div class="ms-auto">
-          <div id="dark-button" class="btn btn-primary mx-3 rounded" onclick="toggleDark()">Dark Mode</div>
-        </div>
+        <div id="dark-mode-button" class="btn btn-primary ms-auto mx-3 rounded" onclick="toggleDark()">Dark Mode</div>
       </div>
     </div>
   </nav>
@@ -395,10 +395,10 @@
 
 <footer id="footer">
   <div class="footer-content p-3">
-    <a href="https://facebook.com/loaferstaunton" target="_blank"><img id="facebook-logo" class="footerImage" src="Images/facebook.png"
-        alt="Facebook Logo" width="25" height="25"> Facebook</a>
-    <a href="https://twitter.com/loaferstaunton" target="_blank"><img id="twitter-logo" class="footerImage" src="Images/twitter.png"
-        alt="Twitter Logo" width="25" height="25"> Twitter</a>
+    <a href="https://facebook.com/loaferstaunton" target="_blank"><img id="facebook-logo" class="footerImage"
+        src="Images/facebook.png" alt="Facebook Logo" width="25" height="25"> Facebook</a>
+    <a href="https://twitter.com/loaferstaunton" target="_blank"><img id="twitter-logo" class="footerImage"
+        src="Images/twitter.png" alt="Twitter Logo" width="25" height="25"> Twitter</a>
   </div>
 </footer>
 
