--- a/contact.html
+++ b/contact.html
@@ -48,9 +48,7 @@
             <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
           </li>
         </ul>
-        <div class="ms-auto">
-          <div id="dark-button" class="btn btn-primary mx-3 rounded" onclick="toggleDark()">Dark Mode</div>
-        </div>
+        <div id="dark-mode-button" class="btn btn-primary ms-auto mx-3 rounded" onclick="toggleDark()">Dark Mode</div>
       </div>
     </div>
   </nav>
