--- a/menus.html
+++ b/menus.html
@@ -31,7 +31,8 @@
               data-bs-toggle="dropdown" aria-expanded="false">
               Menus
             </a>
-            <ul id="nav-dropdown" class="dropdown-menu nav-dropdown active" aria-current="page" aria-labelledby="navbarDropdownMenuLink">
+            <ul id="nav-dropdown" class="dropdown-menu nav-dropdown active" aria-current="page"
+              aria-labelledby="navbarDropdownMenuLink">
               <li><a id="current-dropdown" class="dropdown-item dropdown-current-page" href="menus.html">All Menus</a>
                 <hr id="dropdown-hr">
               </li>
@@ -48,9 +49,7 @@
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
-        <div class="ms-auto">
-          <div id="dark-button" class="btn btn-primary mx-3 rounded" onclick="toggleDark()">Dark Mode</div>
-        </div>
+        <div id="dark-mode-button" class="btn btn-primary ms-auto mx-3 rounded" onclick="toggleDark()">Dark Mode</div>
       </div>
     </div>
   </nav>
@@ -63,45 +62,45 @@
 
   <section id="main-content">
     <div id="menu-cards">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col menu-box">
-          <div class="card">
-            <a href="breakfasts.html">
-              <img src="images/breakfasts.png" class="card-img-top" alt="Breakfasts">
-              <h5 class="card-title">Breakfasts</h5>
-            </a>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col menu-box">
+            <div class="card">
+              <a href="breakfasts.html">
+                <img src="images/breakfasts.png" class="card-img-top" alt="Breakfasts">
+                <h5 class="card-title">Breakfasts</h5>
+              </a>
+            </div>
           </div>
-        </div>
 
-        <div class="col menu-box">
-          <div class="card">
-            <a href="burgers_chips_jackets.html">
-              <img src="images/burgers_chips_jackets.png" class="card-img-top" alt="Burgers, Chips & Jackets">
-              <h5 class="card-title">Burgers, Chips & Jackets</h5>
-            </a>
+          <div class="col menu-box">
+            <div class="card">
+              <a href="burgers_chips_jackets.html">
+                <img src="images/burgers_chips_jackets.png" class="card-img-top" alt="Burgers, Chips & Jackets">
+                <h5 class="card-title">Burgers, Chips & Jackets</h5>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col menu-box">
+            <div class="card">
+              <a href="paninis_wraps_roasts.html">
+                <img src="images/paninis_wraps_roasts.png" class="card-img-top" alt="Paninis, Wraps & Roasts">
+                <h5 class="card-title">Paninis, Wraps & Roasts</h5>
+              </a>
+            </div>
+          </div>
+          <div class="col menu-box">
+            <div class="card">
+              <a href="cold_fillings_salads.html">
+                <img src="images/cold_fillings_salads.png" class="card-img-top" alt="Cold Fillings & Salads">
+                <h5 class="card-title">Cold Fillings & Salad Boxes</h5>
+              </a>
+            </div>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col menu-box">
-          <div class="card">
-            <a href="paninis_wraps_roasts.html">
-              <img src="images/paninis_wraps_roasts.png" class="card-img-top" alt="Paninis, Wraps & Roasts">
-              <h5 class="card-title">Paninis, Wraps & Roasts</h5>
-            </a>
-          </div>
-        </div>
-        <div class="col menu-box">
-          <div class="card">
-            <a href="cold_fillings_salads.html">
-              <img src="images/cold_fillings_salads.png" class="card-img-top" alt="Cold Fillings & Salads">
-              <h5 class="card-title">Cold Fillings & Salad Boxes</h5>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
   </section>
 </body>
 
@@ -109,10 +108,10 @@
 
 <footer id="footer">
   <div class="footer-content p-3">
-    <a href="https://facebook.com/loaferstaunton" target="_blank"><img id="facebook-logo" class="footerImage" src="Images/facebook.png"
-        alt="Facebook Logo" width="25" height="25"> Facebook</a>
-    <a href="https://twitter.com/loaferstaunton" target="_blank"><img id="twitter-logo" class="footerImage" src="Images/twitter.png"
-        alt="Twitter Logo" width="25" height="25"> Twitter</a>
+    <a href="https://facebook.com/loaferstaunton" target="_blank"><img id="facebook-logo" class="footerImage"
+        src="Images/facebook.png" alt="Facebook Logo" width="25" height="25"> Facebook</a>
+    <a href="https://twitter.com/loaferstaunton" target="_blank"><img id="twitter-logo" class="footerImage"
+        src="Images/twitter.png" alt="Twitter Logo" width="25" height="25"> Twitter</a>
   </div>
 </footer>
 
