--- a/catering.html
+++ b/catering.html
@@ -48,9 +48,7 @@
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
-        <div class="ms-auto">
-          <div id="dark-button" class="btn btn-primary mx-3 rounded" onclick="toggleDark()">Dark Mode</div>
-        </div>
+        <div id="dark-mode-button" class="btn btn-primary ms-auto mx-3 rounded" onclick="toggleDark()">Dark Mode</div>
       </div>
     </div>
   </nav>
@@ -83,10 +81,10 @@
 
 <footer id="footer">
   <div class="footer-content p-3">
-    <a href="https://facebook.com/loaferstaunton" target="_blank"><img id="facebook-logo" class="footerImage" src="Images/facebook.png"
-        alt="Facebook Logo" width="25" height="25"> Facebook</a>
-    <a href="https://twitter.com/loaferstaunton" target="_blank"><img id="twitter-logo" class="footerImage" src="Images/twitter.png"
-        alt="Twitter Logo" width="25" height="25"> Twitter</a>
+    <a href="https://facebook.com/loaferstaunton" target="_blank"><img id="facebook-logo" class="footerImage"
+        src="Images/facebook.png" alt="Facebook Logo" width="25" height="25"> Facebook</a>
+    <a href="https://twitter.com/loaferstaunton" target="_blank"><img id="twitter-logo" class="footerImage"
+        src="Images/twitter.png" alt="Twitter Logo" width="25" height="25"> Twitter</a>
   </div>
 </footer>
 
