--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
-        <div class="ms-auto">
-          <div id="dark-button" class="btn btn-primary mx-3 rounded" onclick="toggleDark()">Dark Mode</div>
-        </div>
+        <div id="dark-mode-button" class="btn btn-primary ms-auto mx-3 rounded" onclick="toggleDark()">Dark Mode</div>
       </div>
     </div>
   </nav>
@@ -73,7 +71,8 @@
         visit and you can have a little treat on us.</p>
       <img id="loyalty-card" class="pb-3" src="images/loyalty_stamp.jpg" alt="Loyalty stamps">
       <p class="pt-5 m-0 text-decoration-underline">Allegen Information</p>
-      <p class="mb-0">Please be aware that some of our products may contain one or more of the 14 main allergens that can be harmful
+      <p class="mb-0">Please be aware that some of our products may contain one or more of the 14 main allergens that
+        can be harmful
         if eaten, if you are ordering over the telephone or are visiting the shop, please make the member of staff you
         talk to aware of any specific allergens or other dietary requirements.</p>
     </div>
@@ -84,10 +83,10 @@
 
 <footer id="footer">
   <div class="footer-content p-3">
-    <a href="https://facebook.com/loaferstaunton" target="_blank"><img id="facebook-logo" class="footerImage" src="Images/facebook.png"
-        alt="Facebook Logo" width="25" height="25"> Facebook</a>
-    <a href="https://twitter.com/loaferstaunton" target="_blank"><img id="twitter-logo" class="footerImage" src="Images/twitter.png"
-        alt="Twitter Logo" width="25" height="25"> Twitter</a>
+    <a href="https://facebook.com/loaferstaunton" target="_blank"><img id="facebook-logo" class="footerImage"
+        src="Images/facebook.png" alt="Facebook Logo" width="25" height="25"> Facebook</a>
+    <a href="https://twitter.com/loaferstaunton" target="_blank"><img id="twitter-logo" class="footerImage"
+        src="Images/twitter.png" alt="Twitter Logo" width="25" height="25"> Twitter</a>
   </div>
 </footer>
 
