--- a/paninis_wraps_roasts.html
+++ b/paninis_wraps_roasts.html
@@ -2,62 +2,65 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link href="styles.css" rel="stylesheet">
-  <link rel="icon" href="images/sandwich_logo.png">
-  <title>Paninis Wraps & Roasts</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="styles.css" rel="stylesheet">
+    <link rel="icon" href="images/sandwich_logo.png">
+    <title>Paninis Wraps & Roasts</title>
 </head>
 
 
 <body id="body">
-  <nav id="main-nav" class="navbar navbar-expand-lg navbar-light">
-    <div class="container-fluid navbar-content">
-      <a class="navbar-brand main-nav" href="index.html">Loafers Sandwhich Bar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="menu.html" id="navbarDropdownMenuLink" role="button"
-              data-bs-toggle="dropdown" aria-expanded="false">
-              Menus
-            </a>
-            <ul id="nav-dropdown" class="dropdown-menu nav-dropdown active" aria-current="page" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="menus.html">All Menus</a>
-                <hr id="dropdown-hr">
-              </li>
-              <li><a class="dropdown-item" href="breakfasts.html">Breakfast Menu</a></li>
-              <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips & Jackets</a></li>
-              <li><a id="current-dropdown" class="dropdown-item dropdown-current-page" href="paninis_wraps_roasts.html">Paninis, Wraps & Roasts</a></li>
-              <li><a class="dropdown-item" href="cold_fillings_salads.html">Cold Fillings & Salad Boxes</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="catering.html">Catering</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
-        <div class="ms-auto">
-          <div id="dark-button" class="btn btn-primary mx-3 rounded" onclick="toggleDark()">Dark Mode</div>
+    <nav id="main-nav" class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid navbar-content">
+            <a class="navbar-brand main-nav" href="index.html">Loafers Sandwhich Bar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="menu.html" id="navbarDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Menus
+                        </a>
+                        <ul id="nav-dropdown" class="dropdown-menu nav-dropdown active" aria-current="page"
+                            aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="menus.html">All Menus</a>
+                                <hr id="dropdown-hr">
+                            </li>
+                            <li><a class="dropdown-item" href="breakfasts.html">Breakfast Menu</a></li>
+                            <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips & Jackets</a>
+                            </li>
+                            <li><a id="current-dropdown" class="dropdown-item dropdown-current-page"
+                                    href="paninis_wraps_roasts.html">Paninis, Wraps & Roasts</a></li>
+                            <li><a class="dropdown-item" href="cold_fillings_salads.html">Cold Fillings & Salad
+                                    Boxes</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="catering.html">Catering</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+                <div id="dark-mode-button" class="btn btn-primary ms-auto mx-3 rounded" onclick="toggleDark()">Dark Mode
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </nav>
+    </nav>
 
-  <div>
-    <h1 id="title" class="title">paninis, Wraps and Roasts!</h1>
-  </div>
+    <div>
+        <h1 id="title" class="title">paninis, Wraps and Roasts!</h1>
+    </div>
 
 
 
@@ -284,12 +287,12 @@
 
 <footer id="footer">
     <div class="footer-content p-3">
-      <a href="https://facebook.com/loaferstaunton" target="_blank"><img id="facebook-logo" class="footerImage" src="Images/facebook.png"
-          alt="Facebook Logo" width="25" height="25"> Facebook</a>
-      <a href="https://twitter.com/loaferstaunton" target="_blank"><img id="twitter-logo" class="footerImage" src="Images/twitter.png"
-          alt="Twitter Logo" width="25" height="25"> Twitter</a>
+        <a href="https://facebook.com/loaferstaunton" target="_blank"><img id="facebook-logo" class="footerImage"
+                src="Images/facebook.png" alt="Facebook Logo" width="25" height="25"> Facebook</a>
+        <a href="https://twitter.com/loaferstaunton" target="_blank"><img id="twitter-logo" class="footerImage"
+                src="Images/twitter.png" alt="Twitter Logo" width="25" height="25"> Twitter</a>
     </div>
-  </footer>
+</footer>
 
 <script src="scripts/scripts.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
