Fixed folder capitalisation inconsistencies.

--- a/menus.html
+++ b/menus.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="styles.css" rel="stylesheet">
-  <link rel="icon" href="images/sandwich_logo.png">
+  <link rel="icon" href="Images/sandwich_logo.png">
   <title>Our Menus</title>
 </head>
 
@@ -66,7 +66,7 @@
           <div class="col menu-box">
             <div class="card">
               <a href="breakfasts.html">
-                <img src="images/breakfasts.png" class="card-img-top" alt="Breakfasts">
+                <img src="Images/breakfasts.png" class="card-img-top" alt="Breakfasts">
                 <h5 class="card-title">Breakfasts</h5>
               </a>
             </div>
@@ -75,7 +75,7 @@
           <div class="col menu-box">
             <div class="card">
               <a href="burgers_chips_jackets.html">
-                <img src="images/burgers_chips_jackets.png" class="card-img-top" alt="Burgers, Chips & Jackets">
+                <img src="Images/burgers_chips_jackets.png" class="card-img-top" alt="Burgers, Chips & Jackets">
                 <h5 class="card-title">Burgers, Chips & Jackets</h5>
               </a>
             </div>
@@ -85,7 +85,7 @@
           <div class="col menu-box">
             <div class="card">
               <a href="paninis_wraps_roasts.html">
-                <img src="images/paninis_wraps_roasts.png" class="card-img-top" alt="Paninis, Wraps & Roasts">
+                <img src="Images/paninis_wraps_roasts.png" class="card-img-top" alt="Paninis, Wraps & Roasts">
                 <h5 class="card-title">Paninis, Wraps & Roasts</h5>
               </a>
             </div>
@@ -93,7 +93,7 @@
           <div class="col menu-box">
             <div class="card">
               <a href="cold_fillings_salads.html">
-                <img src="images/cold_fillings_salads.png" class="card-img-top" alt="Cold Fillings & Salads">
+                <img src="Images/cold_fillings_salads.png" class="card-img-top" alt="Cold Fillings & Salads">
                 <h5 class="card-title">Cold Fillings & Salad Boxes</h5>
               </a>
             </div>
@@ -115,7 +115,7 @@
 </footer>
 
 
-<script src="scripts/scripts.js"></script>
+<script src="Scripts/scripts.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
