--- a/catering.html
+++ b/catering.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="styles.css" rel="stylesheet">
-  <link rel="icon" href="images/sandwich_logo.png">
+  <link rel="icon" href="Images/sandwich_logo.png">
   <title>Catering</title>
 </head>
 
@@ -88,7 +88,7 @@
   </div>
 </footer>
 
-<script src="scripts/scripts.js"></script>
+<script src="Scripts/scripts.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
