--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="styles.css" rel="stylesheet">
-  <link rel="icon" href="images/sandwich_logo.png">
+  <link rel="icon" href="Images/sandwich_logo.png">
   <title>Home</title>
 </head>
 
@@ -69,7 +69,7 @@
       <p class="pt-5 text-decoration-underline">Our Loyalty Scheme</p>
       <p>We give your card a stamp when you come in and get some food and when it's full bring it back in on your next
         visit and you can have a little treat on us.</p>
-      <img id="loyalty-card" class="pb-3" src="images/loyalty_stamp.jpg" alt="Loyalty stamps">
+      <img id="loyalty-card" class="pb-3" src="Images/loyalty_stamp.jpg" alt="Loyalty stamps">
       <p class="pt-5 m-0 text-decoration-underline">Allegen Information</p>
       <p class="mb-0">Please be aware that some of our products may contain one or more of the 14 main allergens that
         can be harmful
@@ -90,7 +90,7 @@
   </div>
 </footer>
 
-<script src="scripts/scripts.js"></script>
+<script src="Scripts/scripts.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
